# datahub

./: .gitignore  README.md
client/: Cargo.toml
client/src/: main.rs
docker/: docker-compose.yml  loki-config.yaml  promtail-config.yaml
protos/: text.proto
server/: Cargo.toml  build.rs
server/src/: db.rs  embeddings.rs  main.rs  utils.rs
train_embed/: Cargo.toml
train_embed/src/: file_mask.rs  main.rs  pooler.rs
train_embed/src/data/: batcher.rs  dataset.rs
