[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.1"
tonic = "0.12.1"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
candle = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
hf-hub = "0.3.0"
rand = "0.8.5"
tokenizers = { version = "0.19.0", default-features = false, features = [
  "onig",
] }
safetensors = "0.4.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
anyhow = "1.0.86"

[build-dependencies]
tonic-build = "0.12.1"
