[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.1"
tonic = { version = "0.12.1", features = ["transport"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "full"] }
candle = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
hf-hub = "0.3.0"
rand = "0.8.5"
tokenizers = { version = "0.19.0", default-features = false, features = [
  "onig",
] }
safetensors = "0.4.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
anyhow = "1.0.86"
sysinfo = "0.29.0"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
log = "0.4"
fern = "0.6"
chrono = "0.4"
qdrant-client = "1.11.2"
uuid = { version = "1.3", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.1"
